SWITCHYARD-469 scanners should not add composite if no components were added